fix show flash message overlap

--- a/app/frontend/shared/notifier.css
+++ b/app/frontend/shared/notifier.css
@@ -246,3 +246,7 @@
 [data-pnotify] .custom-paginate-count-of {
   opacity: 0.8;
 }
+
+.pnotify.pnotify-positioned{
+  position: relative;
+}
